# oeisdata-map

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: about.html  methodology.html
eval/: _sample.py  compare.py  compare_alpha_labels.py  compare_alphas.py  run_models.py  taxonomy_explore.py
pipeline/: 01_parse.py  01b_parse_y_edges.py  02_select.py  03_enrich.py  04_embed.py  04b_retrofit.py  05_reduce.py  06_label.py  07_visualize.py  config.py  enrichment.py  filter_panel.html  keywords.py
scripts/: sync_seq.sh
tests/: test_parse.py  test_parse_y_edges.py  test_retrofit.py
